--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <section>
                 <div id="incomplete-tasks">
                     <!-- <div class="task">
-                        <input id="new-task-input" type="text" placeholder="What do you have planned?" disabled />
+                        <input class="new-task-input" type="text" placeholder="What do you have planned?" disabled />
                         <div class="actions">
                             <button class="edit-button">Edit</button>
                             <button class="delete-button">Delete</button>
