--- a/index.html
+++ b/index.html
@@ -17,27 +17,13 @@
 </div>
 
 <ul id="myUL">
-  <li>Hit the gym</li>
+
+  <!--<li>Hit the gym</li>
   <li class="checked">Pay bills</li>
   <li>Meet George</li>
-  <li>Buy eggs</li>
-  <li>Read a book</li>
-  <li>Organize office</li>
-</ul><div id="myDIV" class="header">
-  <h2>My To Do List</h2>
-  <input type="text" id="myInput" placeholder="Title...">
-  <span onclick="newElement()" class="addBtn">Add</span>
-</div>
+  <li>Buy eggs</li> -->
 
-<ul id="myUL">
-  <li>Hit the gym</li>
-  <li class="checked">Pay bills</li>
-  <li>Meet George</li>
-  <li>Buy eggs</li>
-  <li>Read a book</li>
-  <li>Organize office</li>
-</ul>
-
+  </ul>
     <script src="./index.js"></script>
 </body>
 
