--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>ToDo List</title>
-</head>
-<body>
-    <h1>Tasks</h1>
-<ul id="tasks"></ul>
-<form>
-    <input type="text" id="task" placeholder="New task" />
-    <input type="submit" id="submit" />
-</form>
-    <script src="./js/script.js"></script>
-</body>
+  </head>
+  <body>
+    <div class="task-container">
+      <h1>Tasks</h1>
+      <form action="">
+        <input
+          type="text"
+          name=""
+          id="task-input"
+          placeholder="Add a new Task..."
+        />
+        <button id="add-btn" type="submit">Add</button>
+      </form>
+      <ul id="tasks"></ul>
+    </div>
+    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/main.js"></script>
+  </body>
 </html>
