--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       </form>
       <ul id="tasks"></ul>
     </div>
-    <!-- <script src="./js/script.js"></script> -->
-    <script src="./js/main.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
