--- a/index.html
+++ b/index.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Tasks</title>
-    <script
-      src="https://kit.fontawesome.com/15f5fbfbce.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div class="task-container">
-      <h1>Tasks</h1>
-      <form action="">
-        <input
-          type="text"
-          name=""
-          id="task-input"
-          placeholder="Add a new Task..."
-        />
-        <button id="add-btn" type="submit">Add</button>
-      </form>
-      <ul id="tasks"></ul>
-    </div>
-    <script src="./js/script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <link rel="stylesheet" href="./style.css" /> -->
+  <title>ToDo</title>
+  <script src="https://kit.fontawesome.com/15f5fbfbce.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <div class="task-container">
+    <h1>Tasks</h1>
+    <form action="">
+      <input type="text" id="task-input" placeholder="Add a new Task..." />
+      <button id="add-btn" type="submit">Add</button>
+    </form>
+    <ul id="tasks"></ul>
+  </div>
+  <script src="./js/script.js"></script>
+</body>
 </html>
-
