--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>ToDo</h1>
      <!-- Form for adding new tasks -->
     <form id="task-form">
-      <input type="text" id="task-input" placeholder="Create a new todo..." />
+      <input type="text" id="task-input" placeholder="Create a new Task..." />
       <button id="add-btn" type="submit">Add</button>
     </form>
      <!-- Unordered list to hold tasks -->
