--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- Meta tags for character set and viewport settings -->
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Meta tags for character set and viewport settings -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Page title -->
-  <title>ToDo</title>
-  <!-- Link to external stylesheet -->
-  <link rel="stylesheet" href="./css/style.css" />
+    <title>Task</title>
+    <!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- FontAwesome for icons -->
-  <script src="https://kit.fontawesome.com/15f5fbfbce.js" crossorigin="anonymous"></script>
-</head>
-<body>
-   <!-- Main container for tasks -->
-  <div class="task-container">
-    <h1>ToDo</h1>
-     <!-- Form for adding new tasks -->
-    <form id="task-form">
-      <input type="text" id="task-input" placeholder="Create a new Task..." />
-      <button id="add-btn" type="submit">Add</button>
-    </form>
-     <!-- Unordered list to hold tasks -->
-    <ul id="tasks"></ul>
-  </div>
-  <!-- Link to external JavaScript file -->
-  <script src="./js/script.js"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/15f5fbfbce.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- Main container for tasks -->
+    <div class="task-container">
+      <h1>Tasks</h1>
+      <!-- Form for adding new tasks -->
+      <form id="task-form">
+        <input type="text" id="task-input" placeholder="Create a new Task..." />
+        <button id="add-btn" type="submit">Add</button>
+      </form>
+      <!-- Unordered list to hold tasks -->
+      <ul id="tasks"></ul>
+    </div>
+    <!-- Link to external JavaScript file -->
+    <script src="./js/script.js"></script>
+  </body>
 </html>
