--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A ToDo list app for managing tasks, setting reminders, and improving productivity. It allows users to add, edit, complete, and delete tasks. Tasks are saved in the local storage, so they persist even after the page is refreshed."
+    />
+    <meta
+      name="keywords"
+      content="task management, to-do list, task tracking, reminders, due dates, prioritization"
+    />
+
     <!-- Page title -->
     <title>Task</title>
     <!-- Link to external stylesheet -->
