--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A ToDo list app for managing tasks, setting reminders, and improving productivity. It allows users to add, edit, complete, and delete tasks. Tasks are saved in the local storage, so they persist even after the page is refreshed."
+      content="A ToDo list app for managing tasks, setting reminders, and improving productivity. Features include task adding, editing, complete, and delete. Tasks are also saved in the local storage, so they persist even after the page is refreshed."
     />
     <meta
       name="keywords"
-      content="task management, to-do list, task tracking, reminders, due dates, prioritization"
+      content="task management, to-do list, task tracking, reminders, due dates, prioritization,  completed tasks, task scheduling, checklists, local storage, data persistence, task edit, task delete,  responsive, web app, accessibility, html, css, JavaScript"
     />
 
     <!-- Page title -->
