--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- SEO -->
     <meta
       name="description"
       content="A ToDo list app for managing tasks, setting reminders, and improving productivity. Features include task adding, editing, complete, and delete. Tasks are also saved in the local storage, so they persist even after the page is refreshed."
